# football-player-identification

./: .gitignore  README.md  README_WORKFLOW.md  handoff.md  pyproject.toml  requirements.txt
configs/: bytetrack_tracking_debug.yaml  calibration.example.json  default.yaml  default_realvideo_ocr.yaml  default_realvideo_ocr_nopromote.yaml  default_realvideo_ocr_nopromote_rawgate020.yaml  default_realvideo_ocr_nopromote_rawgate020_broadcastcontrast.yaml  default_realvideo_ocr_nopromote_rawgate020_digitfix72.yaml  default_realvideo_ocr_nopromote_rawgate020_gkfallback.yaml  default_realvideo_ocr_nopromote_rawgate020_paddleocr.yaml  default_realvideo_ocr_nopromote_rawgate020_preserve.yaml  default_realvideo_ocr_nopromote_rawgate020_preserve_noglobalowner.yaml  default_realvideo_ocr_nopromote_rawgate020_propagation.yaml  default_realvideo_ocr_nopromote_rawgate020_propagation_overlap.yaml  default_realvideo_ocr_nopromote_rawgate020_propagation_relaxed.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts_gkfallback.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts_loose_noreset_gkfallback_spreadgate.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts_loose_noreset_gkfallback_spreadgate_propagation.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts_loose_noreset_gkfallback_spreadgate_propagation_ballkalman.yaml  default_realvideo_ocr_nopromote_rawgate020_scenecuts_loose_noreset_gkfallback_spreadgate_qualityvote.yaml  default_realvideo_ocr_nopromote_rawgate020_segmentcandidates500.yaml  (+10 more)
(+61 files in other folders)
